# linkedin-fullstack

./: README.md
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
backend/app/: main.py
backend/app/applications/: models.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  models.py  router.py  service.py
backend/app/connections/: models.py  router.py  schemas.py  service.py
backend/app/core/: celery_app.py  config.py  database.py  redis.py
backend/app/jobs/: models.py  router.py  schemas.py  service.py
backend/app/notifications/: models.py  router.py  schemas.py  service.py  tasks.py
backend/app/profiles/: models.py  router.py  schemas.py  service.py
backend/app/users/: models.py  router.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_init.py
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_connections.py  test_jobs.py  test_users.py
frontend/: index.html
